--- a/SuperChat/SuperChat/MainWindow.xaml
+++ b/SuperChat/SuperChat/MainWindow.xaml
@@ -87,6 +87,22 @@
                       Grid.Row="1"
                       ItemContainerStyle="{StaticResource ContactCard}"/>
 
+            <StackPanel Grid.Row="2"
+                        Orientation="Horizontal"
+                        Background="#292B2F">
+                
+                <Border CornerRadius="25"
+                        Width="30" Height="30"
+                        Background="#3bff6f"
+                        Margin="18,0,0,0"/>
+
+                <StackPanel VerticalAlignment="Center">
+                    <Label Content="Username"
+                           Foreground="White"
+                           FontWeight="SemiBold"/>
+                </StackPanel>
+
+            </StackPanel>
         </Grid>
         
     </Grid>
