--- a/SuperChat/SuperChat/Themes/ContactCard.xaml
+++ b/SuperChat/SuperChat/Themes/ContactCard.xaml
@@ -22,9 +22,11 @@
                         <StackPanel Orientation="Horizontal"
                                     Margin="10,0,0,0">
 
-                            <Border Width="30" Height="30"
-                                    Background="Cornflowerblue"
-                                    CornerRadius="25"/>
+                            <Ellipse Width="30" Height="30">
+                                <Ellipse.Fill>
+                                    <ImageBrush ImageSource="{Binding ImageSource}"/>
+                                </Ellipse.Fill>
+                            </Ellipse>
 
                             <StackPanel>
                                 <Label Content="{Binding Username}"
